# LLMStady

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt
LLMClient/: .gitignore  settings.gradle.kts
LLMClient/app/: build.gradle.kts
LLMClient/app/src/main/: AndroidManifest.xml
LLMClient/gradle/: libs.versions.toml
LLMClient/gradle/wrapper/: gradle-wrapper.properties
docs/: android-go-api-demo.md  go-grpc-api-architecture.md  langgraph-server.md  python-go-local-debug.md  python-module-loading-flow.md  rag-demo.md  workprogress.md
docs/rag_demo/: android_architecture.md  android_performance.md  java_solid.md
go-api/: .env.example  Makefile  README.md  go.mod  go.sum
go-api/cmd/server/: main.go
go-api/internal/application/dto/: expert.go
go-api/internal/application/service/: mobile_architect_service.go  mobile_architect_service_test.go
go-api/internal/domain/chat/: entity.go  repository.go
go-api/internal/infrastructure/agent/: http_client.go  http_client_test.go
src/llm/: __init__.py  cli.py  config.py  main.py
src/llm/agent/: __init__.py  factory.py  runner.py
src/llm/domain/: __init__.py  models.py
src/llm/http/: __init__.py  app.py  schemas.py  server.py
src/llm/prompts/: __init__.py  system_prompt.py
src/llm/rag/: __init__.py  chunker.py  cli.py  loader.py  models.py  retriever.py  service.py
src/llm/tools/: __init__.py  architecture.py  performance.py  principles.py  profile.py  review.py
tests/: test_config.py  test_http_app.py  test_rag_retriever.py  test_tools.py
(+22 files in other folders)
